[gd_scene format=3 uid="uid://p180ef84ps7w"]

[ext_resource type="Script" uid="uid://bj1c3rpld5lrr" path="res://Assets/Scripts/DeckOfFate.gd" id="1_6eug2"]
[ext_resource type="Script" uid="uid://cj7pttaxyo1v0" path="res://Assets/Scripts/DoFDeckManager.gd" id="3_2lpbm"]
[ext_resource type="Script" uid="uid://v3qbe6gbirid" path="res://Assets/Scripts/PlayerManager.gd" id="3_rveja"]
[ext_resource type="Resource" uid="uid://b2if5vfroui2h" path="res://Assets/Decks/Player1Deck.tres" id="5_2lpbm"]
[ext_resource type="Script" uid="uid://bbi8i6vef3f6y" path="res://addons/simple_cards/hand/card_hand.gd" id="5_6eug2"]
[ext_resource type="Texture2D" uid="uid://c0rds04nv27pg" path="res://Assets/Images/Board layout.png" id="8_2lpbm"]
[ext_resource type="Resource" uid="uid://uaohngmwr5tu" path="res://Assets/Decks/Player2Deck.tres" id="8_nmsih"]
[ext_resource type="Script" uid="uid://v4hj4p4kc0m" path="res://Assets/Scripts/card_slot.gd" id="9_nmsih"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8s1p"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.46, 0.46, 0.46, 1)

[node name="DeckOfFate" type="CanvasLayer" unique_id=1075070763]
script = ExtResource("1_6eug2")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=524062610]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=655360262]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
theme_override_constants/separation = -50
alignment = 1

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/VBoxContainer" unique_id=986300672]
modulate = Color(1, 1, 1, 0.41960785)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("8_2lpbm")
expand_mode = 1
stretch_mode = 5
flip_h = true
flip_v = true

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer" unique_id=1724844611]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("8_2lpbm")
expand_mode = 1
stretch_mode = 5

[node name="P1ScoreDesc_VB" type="VBoxContainer" parent="." unique_id=757726541]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="P1ScoreDesc_RTL" type="RichTextLabel" parent="P1ScoreDesc_VB" unique_id=1469831318]
layout_mode = 2
text = "P1 Score"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="P1Score_RTL" type="RichTextLabel" parent="P1ScoreDesc_VB" unique_id=658339577]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "0"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2ScoreDesc_VB" type="VBoxContainer" parent="." unique_id=411146391]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.5
offset_bottom = 30.5
grow_horizontal = 0
grow_vertical = 2

[node name="P2ScoreDesc_RTL" type="RichTextLabel" parent="P2ScoreDesc_VB" unique_id=271165457]
layout_mode = 2
text = "P2 Score"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Score_RTL" type="RichTextLabel" parent="P2ScoreDesc_VB" unique_id=1944932997]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "0"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PhaseLabel" type="RichTextLabel" parent="." unique_id=1780601830]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1000, 50)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -27.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 40
text = "Phase"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="PhaseLabel" unique_id=910902245]
modulate = Color(1, 1, 1, 0.31764707)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="HelperText_MC" type="MarginContainer" parent="." unique_id=40023817]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 114.0
offset_top = 44.0
offset_right = 413.0
offset_bottom = 160.0
grow_vertical = 2

[node name="HelperText_VB" type="VBoxContainer" parent="HelperText_MC" unique_id=196451914]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="HelperTextTitle_RTL" type="RichTextLabel" parent="HelperText_MC/HelperText_VB" unique_id=1011199156]
clip_contents = false
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "NOTES"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="HelperText_MC/HelperText_VB/HelperTextTitle_RTL" unique_id=887541934]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.34117648)
metadata/_edit_use_anchors_ = true

[node name="HelperText_RTL" type="RichTextLabel" parent="HelperText_MC/HelperText_VB" unique_id=156828087]
custom_minimum_size = Vector2(0, 82.44)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="HelperText_MC" unique_id=504804045]
z_index = -5
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b8s1p")

[node name="Player1" type="Control" parent="." unique_id=579294670 node_paths=PackedStringArray("victory_slots")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_rveja")
victory_slots = [NodePath("VictoryDisplay/VictorySlot1"), NodePath("VictoryDisplay/VictorySlot2"), NodePath("VictoryDisplay/VictorySlot3"), NodePath("VictoryDisplay/VictorySlot4"), NodePath("VictoryDisplay/VictorySlot5"), NodePath("VictoryDisplay/VictorySlot6")]

[node name="DeckManager" type="Node" parent="Player1" unique_id=1647121810 node_paths=PackedStringArray("draw_pile", "discard_pile")]
script = ExtResource("3_2lpbm")
show_cards = true
starting_deck = ExtResource("5_2lpbm")
draw_pile = NodePath("../Draw")
discard_pile = NodePath("../Discard")

[node name="Draw" type="Control" parent="Player1" unique_id=635048624]
custom_minimum_size = Vector2(90, 122)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 272.0
offset_top = 366.0
offset_right = 362.0
offset_bottom = 488.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("5_6eug2")
shape = 0
card_spacing = 0.0
enable_reordering = false
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="Player1/Draw" unique_id=623059392]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 1, 0.20000005, 0.5019608)

[node name="Discard" type="Control" parent="Player1" unique_id=1470158019]
custom_minimum_size = Vector2(90, 122)
anchors_preset = 0
offset_left = -363.0
offset_top = 366.0
offset_right = -273.0
offset_bottom = 488.0
script = ExtResource("5_6eug2")
shape = 0
card_spacing = 0.0
enable_reordering = false
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="Player1/Discard" unique_id=370669311]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5019608)

[node name="LeaderSlot" type="Control" parent="Player1" unique_id=1651035360]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 82.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_6eug2")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 1
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="Player1/LeaderSlot" unique_id=373487924]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0.5019608)

[node name="SupportSlot" type="Control" parent="Player1" unique_id=77449282]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 121.0
offset_top = 110.0
offset_right = 121.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_6eug2")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 1
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="Player1/SupportSlot" unique_id=1197940603]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.049999714, 1, 0.5019608)

[node name="Hand" type="Control" parent="Player1" unique_id=1532879754]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 426.0
offset_bottom = 426.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("5_6eug2")
shape = 0
card_spacing = 80.0
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="Player1/Hand" unique_id=401520247]
z_index = -2
custom_minimum_size = Vector2(300, 122)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.22526532, 0.2252653, 0.2252653, 0.5019608)

[node name="VictoryDisplay" type="HBoxContainer" parent="Player1" unique_id=398294927]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = 213.0
offset_right = 280.0
offset_bottom = 335.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="VictorySlot1" type="Control" parent="Player1/VictoryDisplay" unique_id=2122172564 node_paths=PackedStringArray("adjacent_right")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_right = NodePath("../VictorySlot2")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player1/VictoryDisplay/VictorySlot1" unique_id=1450872780]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="VictorySlot2" type="Control" parent="Player1/VictoryDisplay" unique_id=1547183053 node_paths=PackedStringArray("adjacent_left", "adjacent_right")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_left = NodePath("../VictorySlot1")
adjacent_right = NodePath("../VictorySlot3")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player1/VictoryDisplay/VictorySlot2" unique_id=277244995]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="VictorySlot3" type="Control" parent="Player1/VictoryDisplay" unique_id=696577211 node_paths=PackedStringArray("adjacent_left", "adjacent_right")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_left = NodePath("../VictorySlot2")
adjacent_right = NodePath("../VictorySlot4")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player1/VictoryDisplay/VictorySlot3" unique_id=1609200123]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="VictorySlot4" type="Control" parent="Player1/VictoryDisplay" unique_id=772942682 node_paths=PackedStringArray("adjacent_left", "adjacent_right")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_left = NodePath("../VictorySlot3")
adjacent_right = NodePath("../VictorySlot5")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player1/VictoryDisplay/VictorySlot4" unique_id=298108973]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="VictorySlot5" type="Control" parent="Player1/VictoryDisplay" unique_id=958447954 node_paths=PackedStringArray("adjacent_left", "adjacent_right")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_left = NodePath("../VictorySlot4")
adjacent_right = NodePath("../VictorySlot6")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player1/VictoryDisplay/VictorySlot5" unique_id=2113870019]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="VictorySlot6" type="Control" parent="Player1/VictoryDisplay" unique_id=308410399 node_paths=PackedStringArray("adjacent_left")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_left = NodePath("../VictorySlot5")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player1/VictoryDisplay/VictorySlot6" unique_id=1387798942]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="Player2" type="Control" parent="." unique_id=580085668 node_paths=PackedStringArray("victory_slots")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = -3.1415927
script = ExtResource("3_rveja")
victory_slots = [NodePath("VictoryDisplay/VictorySlot1"), NodePath("VictoryDisplay/VictorySlot2"), NodePath("VictoryDisplay/VictorySlot3"), NodePath("VictoryDisplay/VictorySlot4"), NodePath("VictoryDisplay/VictorySlot5"), NodePath("VictoryDisplay/VictorySlot6")]

[node name="DeckManager" type="Node" parent="Player2" unique_id=573709054 node_paths=PackedStringArray("draw_pile", "discard_pile")]
script = ExtResource("3_2lpbm")
show_cards = true
starting_deck = ExtResource("8_nmsih")
draw_pile = NodePath("../Draw")
discard_pile = NodePath("../Discard")

[node name="Draw" type="Control" parent="Player2" unique_id=1689787824]
custom_minimum_size = Vector2(90, 122)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 272.0
offset_top = 366.0
offset_right = 362.0
offset_bottom = 488.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("5_6eug2")
shape = 0
card_spacing = 0.0
enable_reordering = false
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="Player2/Draw" unique_id=2075870482]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 1, 0.20000005, 0.5019608)

[node name="Discard" type="Control" parent="Player2" unique_id=553287526]
custom_minimum_size = Vector2(90, 122)
anchors_preset = 0
offset_left = -363.0
offset_top = 366.0
offset_right = -273.0
offset_bottom = 488.0
script = ExtResource("5_6eug2")
shape = 0
card_spacing = 0.0
enable_reordering = false
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="Player2/Discard" unique_id=294944902]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5019608)

[node name="LeaderSlot" type="Control" parent="Player2" unique_id=95219111]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 82.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_6eug2")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 1
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="Player2/LeaderSlot" unique_id=669562297]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0.5019608)

[node name="SupportSlot" type="Control" parent="Player2" unique_id=2094201841]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 121.0
offset_top = 110.0
offset_right = 121.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_6eug2")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 1
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="Player2/SupportSlot" unique_id=1027613966]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.049999714, 1, 0.5019608)

[node name="Hand" type="Control" parent="Player2" unique_id=1418410139]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 426.0
offset_bottom = 426.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("5_6eug2")
shape = 0
card_spacing = 80.0
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="Player2/Hand" unique_id=2079019884]
z_index = -2
custom_minimum_size = Vector2(300, 122)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.22526532, 0.2252653, 0.2252653, 0.5019608)

[node name="VictoryDisplay" type="HBoxContainer" parent="Player2" unique_id=262991290]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = 213.0
offset_right = 280.0
offset_bottom = 335.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="VictorySlot1" type="Control" parent="Player2/VictoryDisplay" unique_id=2080194562 node_paths=PackedStringArray("adjacent_right")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_right = NodePath("../VictorySlot2")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player2/VictoryDisplay/VictorySlot1" unique_id=1122780752]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="VictorySlot2" type="Control" parent="Player2/VictoryDisplay" unique_id=1920795617 node_paths=PackedStringArray("adjacent_left", "adjacent_right")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_left = NodePath("../VictorySlot1")
adjacent_right = NodePath("../VictorySlot3")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player2/VictoryDisplay/VictorySlot2" unique_id=2033134508]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="VictorySlot3" type="Control" parent="Player2/VictoryDisplay" unique_id=1582079975 node_paths=PackedStringArray("adjacent_left", "adjacent_right")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_left = NodePath("../VictorySlot2")
adjacent_right = NodePath("../VictorySlot4")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player2/VictoryDisplay/VictorySlot3" unique_id=2107265248]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="VictorySlot4" type="Control" parent="Player2/VictoryDisplay" unique_id=272026016 node_paths=PackedStringArray("adjacent_left", "adjacent_right")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_left = NodePath("../VictorySlot3")
adjacent_right = NodePath("../VictorySlot5")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player2/VictoryDisplay/VictorySlot4" unique_id=718159919]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="VictorySlot5" type="Control" parent="Player2/VictoryDisplay" unique_id=349406575 node_paths=PackedStringArray("adjacent_left", "adjacent_right")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_left = NodePath("../VictorySlot4")
adjacent_right = NodePath("../VictorySlot6")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player2/VictoryDisplay/VictorySlot5" unique_id=236941831]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)

[node name="VictorySlot6" type="Control" parent="Player2/VictoryDisplay" unique_id=409096733 node_paths=PackedStringArray("adjacent_left")]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("9_nmsih")
adjacent_left = NodePath("../VictorySlot5")
shape = 0
card_spacing = 0.0
enable_reordering = false
max_hand_size = 2

[node name="ColorRect" type="ColorRect" parent="Player2/VictoryDisplay/VictorySlot6" unique_id=40211104]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.5019608)
